fixed bootstrap navbar on mobile devices, added some margins on certain things (cards, navbar menu items, etc)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@
 
 .customCard{
 	background-color: #f5f5f5;
+	margin-bottom: 20px;
 }
 
 #overlapFix {
@@ -31,8 +32,10 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 3px;
+	margin-bottom: 2px;
 }
-.left {
+/* .left {
 	margin-left: 15px;
 	margin-right: -15px;
 	color: white;
@@ -41,10 +44,23 @@
 	margin-left: -15px;
 	margin-right: 15px;
 	color: white;
+} */
+
+.customMenu {
+	/* margin-top: 5px; */
+	margin-right: 5px;
+	margin-left: 5px;
 }
 
+.customMenu:hover {
+	background-color: #3f3f3f;
+	color: white;
+	text-decoration: none;
+}
+.customMenuBuffer {
+	margin-top: 10px;
 
-
+}
 
 .iconDiv:hover { 
     background-color: #3f3f3f;
